tests/NormalTests/paczka1/small_fuzzy/32542801.err
Error in line 1: A866 S136 95,2
Error in line 4: A866 A866 9,8
Error in line 5: QeVVN S668 10,6
